# jngl-emscripten

./: .gitmodules  CMakeLists.txt  emscripten.txt
src/: game.cpp
